[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/TaisonSprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sounds/punchout1.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/tysonpunch.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/tysonpunch2.wav" type="AudioStream" id=7]
[ext_resource path="res://Scripts/Traps/TisonTrap.gd" type="Script" id=8]

[sub_resource type="Animation" id=14]
resource_name = "Punch"
length = 8.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2.5, 8 ),
"transitions": PoolRealArray( 0.5, 1, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -96, 0 ), Vector2( -96, 0 ), Vector2( -2000, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "default", "punch", "flex" ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("PunchSfx")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 1.3, 1.8 )
}
tracks/3/type = "audio"
tracks/3/path = NodePath("Intro")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 18.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0 )
}
tracks/4/type = "method"
tracks/4/path = NodePath("AnimatedSprite/Punch1/Punch1_Collision")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ "disabled", true ],
"method": "set_deferred"
}, {
"args": [ "disabled", false ],
"method": "set_deferred"
}, {
"args": [ "disabled", true ],
"method": "set_deferred"
} ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("AnimatedSprite/Punch2/Punch2_Collision")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ "disabled", true ],
"method": "set_deferred"
}, {
"args": [ "disabled", false ],
"method": "set_deferred"
}, {
"args": [ "disabled", true ],
"method": "set_deferred"
} ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 1.3, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "spawn_circle"
}, {
"args": [  ],
"method": "spawn_circle"
} ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("AnimatedSprite/MuscleFlex/Muscle_Collision")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "disabled", true ],
"method": "set_deferred"
}, {
"args": [ "disabled", false ],
"method": "set_deferred"
} ]
}

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "default" ]
}

[node name="TisonTrap" type="Node2D"]
script = ExtResource( 8 )

[node name="AnimatedSprite" parent="." instance=ExtResource( 1 )]
animation = "default"
frame = 3
playing = true

[node name="PunchSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Sfx"

[node name="Intro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Sfx"

[node name="PunchTrap" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/Punch = SubResource( 14 )
anims/RESET = SubResource( 15 )

[connection signal="animation_finished" from="PunchTrap" to="." method="_on_PunchTrap_animation_finished"]
